tests/fixtures/invalid/max_list_dict.py
# Cannot call max() with List[int], Dict[str, int]
x = max([1, 2, 3], {"a": 1})
